clusters/pi/home/qbit/qbittorrent.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbit
  namespace: home
  labels:
    app: qbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbit
  template:
    metadata:
      name: qbit
      namespace: home
      labels:
        app: qbit
    spec:
      containers:
      - name: wireguard
        image: lscr.io/linuxserver/wireguard:arm64v8-v1.0.20210914-ls7
        resources:
          requests:
            memory: "32Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "250m"

        ports:
        - containerPort: 8080
          name: qbit-port
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "SYS_MODULE"]
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - |
                IP=`curl -s https://icanhazip.com/`
                echo "current IP:${IP}"
                [ "${IP}" != "$HOME_IP" ]
          initialDelaySeconds: 5
          periodSeconds: 15
         
        volumeMounts:
          - name: lib-modules
            mountPath: /lib/modules
          - name: config
            mountPath: /config

      - name: qbit
        image: lscr.io/linuxserver/qbittorrent:4.6.2
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1024Mi"
            cpu: "1000m"

        volumeMounts:
          - name: nfs-volume
            mountPath: /config
          - name: media-root
            mountPath: /media

      volumes:
        - name: lib-modules
          hostPath:
            path: /lib/modules
        - name: config
          nfs:
            server: 192.168.86.10
            path: /nfs/configs/wireguard/config
            readOnly: false
        - name: nfs-volume
          nfs:
            server: 192.168.86.10
            path: /nfs/configs/qbittorrent/config
            readOnly: false
        - name: media-root
          nfs:
            server: 192.168.86.10
            path: /nfs/media
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: qbit
  namespace: home
spec:
  selector:
    app: qbit
  ports:
  - name: qbit-port
    port: 80
    targetPort: qbit-port
  type: LoadBalancer
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qbit-ingress-route
  namespace: home
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.qbit.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: qbit
          port: 80
    - match: Host(`qbit.local.fellowfreak.dev`)
      kind: Rule
      services:
        - name: qbit
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: local-fellowfreak-dev-production-tls
